--- a/lab-insta-parse/Info.plist
+++ b/lab-insta-parse/Info.plist
@@ -26,6 +26,6 @@
 		<string>Filmotype-Jade.otf</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string>In order to take a photo to add to your post, we need to access your camera.</string>
+	<string>cam</string>
 </dict>
 </plist>
